# Teamprojekt-WS-20-21

./: .gitignore  README.rst  SaveLocal  github.xml  pluginAdvertiser.xml  requirements.txt  setup.cfg
codestyles/: Default.xml
inspection/: Default.xml
teamproject/: ._Crawler.csv  Alldata.csv  Analysing.py  Crawler.csv  Gamedates.csv  Matchdays.csv  OneYear.csv  Prediction_Algo.py  TestGUI  Vorhersage_Algo.py  __main__.py  crawler.py  gui.py  statistics.py  stats.py  vorhersage_algo.py
teamproject/Algorithms/: Linear Regression.py  LinearRegression.py  Minimal Prediction.py  Minimal.py  MinimalerVorhersageAlgo.py  Poisson Distribution.py  Vorhersage_Algo.py  poissonDistribution.py
tests/: test_LinearRegression.py  test_MinimalAlgo.py  test_algo.py  test_crawler.py  test_gui.py  test_poissonDistributionAlgo.py
